:heavy_plus_sign: Setup for Mac
Add setup script for MacOS and fix zsh, nvim, python requirements

--- a/vim/SpaceVim/init.toml
+++ b/vim/SpaceVim/init.toml
@@ -66,3 +66,9 @@
   name = "lang#python"
   checker = "flake8"
 
+[[layers]]
+  name = "lang#markdown"
+
+[[custom_plugins]]
+  name = 'Shougo/deoplete.nvim'
+  merged = 0
