--- a/vim/SpaceVim/init.toml
+++ b/vim/SpaceVim/init.toml
@@ -8,13 +8,16 @@
 
 # All SpaceVim option below [option] section
 [options]
-    # The default value is vimfiler.
+    # file manager plugins supported in SpaceVim:
+    # - vimfiler (default)
+    # - nerdtree
+    # - defx
     filemanager = "nerdtree"
     # set spacevim theme. by default colorscheme layer is not loaded,
     # if you want to use more colorscheme, please load the colorscheme
     # layer
-    colorscheme = "gruvbox"
-    background = "dark"
+    colorscheme = "SpaceVim"
+    colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
     enable_guicolors = false
@@ -71,4 +74,8 @@
 
 [[custom_plugins]]
   name = 'Shougo/deoplete.nvim'
+  merged = 0
+
+[[custom_plugins]]
+  name = 'Xuyuanp/nerdtree-git-plugin'
   merged = 0
