--- a/vim/SpaceVim/init.toml
+++ b/vim/SpaceVim/init.toml
@@ -35,6 +35,7 @@
     enable_vimfiler_gitstatus = true
 		# Enable bootstarp scripts
     bootstrap_after = "myconfig#after"
+    automatic_update = true
 
 # Enable autocomplete layer
 [[layers]]
