:wrench: Update vim config
Add layer for groovy syntax to use in Jenkinsfile.

--- a/vim/SpaceVim/init.toml
+++ b/vim/SpaceVim/init.toml
@@ -80,6 +80,9 @@
 [[layers]]
   name = "lang#markdown"
 
+[[layers]]
+  name = "lang#groovy"
+
 [[custom_plugins]]
   name = 'Shougo/deoplete.nvim'
   merged = 0
