--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -3,6 +3,8 @@ name: Ubuntu-CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
+  schedule:
+    - cron: '0 9 * * 1-5'
   push:
     branches: [ master ]
   pull_request:
