--- a/vim/SpaceVim/init.toml
+++ b/vim/SpaceVim/init.toml
@@ -16,7 +16,8 @@
     # set spacevim theme. by default colorscheme layer is not loaded,
     # if you want to use more colorscheme, please load the colorscheme
     # layer
-    colorscheme = "OceanicNext"
+    colorscheme = "one"
+    # colorscheme = "OceanicNext"
     colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
@@ -34,9 +35,10 @@
     vimcompatible = true
     enable_vimfiler_gitstatus = true
 		# Enable bootstarp scripts
-    bootstrap_after = "myconfig#after"
+    bootstrap_before = 'myspacevim#before'
+    bootstrap_after = 'myspacevim#after'
     automatic_update = true
-    pymode_python = "python3"
+    # pymode_python = "python3"
 
 [[layers]]
   name = "default"
@@ -97,6 +99,10 @@
 # add custom_plugins: https://github.com/mhartington/oceanic-next
 [[custom_plugins]]
   name = "mhartington/oceanic-next"
+  merged = 0
+
+[[custom_plugins]]
+  name = "rakr/vim-one"
   merged = 0
 
 [[layers]]
