--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,11 +13,21 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build18_04:
+    name: Build on Ubuntu 18.04
     runs-on: 	ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
+    - name: Bootstap dotfiles
+      run: "./bootstrap.sh"
+    - name: Setup Ubuntu machine
+      run: "./setup/setup_new_ubuntu_machine.sh"
 
+  build20_04:
+    name: Build on Ubuntu 20.04
+    runs-on: 	ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
     - name: Bootstap dotfiles
       run: "./bootstrap.sh"
     - name: Setup Ubuntu machine
